--- a/style.css
+++ b/style.css
@@ -11,8 +11,10 @@ h1 {
     font-size: 2em;
 }
 
-p, li {
+p {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 12pt;
+    list-style-type: none;
 }
 
 a {
