--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ h1 {
 p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
-    list-style-type: none;
 }
 
 a {
@@ -27,4 +26,10 @@ a {
 a:hover {
     color:#000000;
     text-decoration: underline;
+}
+
+@media only screen and (min-width: 600px) {
+    .img {
+      width: 100%;
+    }
 }
