--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ a:hover {
     text-decoration: underline;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
     .img {
       width: 100%;
     }
