--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@media (max-width: 400px) {
+    img {
+      max-width: 100%;
+    }
+  }
+
 body {
     border: 10px solid #0b0d95;
     padding: 34px;
@@ -26,4 +32,8 @@ a {
 a:hover {
     color:#000000;
     text-decoration: underline;
+}
+
+img {
+    height: 150px;
 }
