--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     padding: 34px;
 }
 
+section {
+    margin-left: 15%;
+}
+
 h1, h2 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -28,6 +32,24 @@ a:hover {
     text-decoration: underline;
 }
 
-img {
+nav {
+    position:fixed;
+    width:10%;
+}
+   
+img {  
     height: 150px;
 }
+
+left {
+    float: left;
+    width: 70%;
+    border: 3px solid #727272;
+    padding: 10px;
+  }
+
+clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
