--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
 body {
     border: 10px solid #0b0d95;
-    padding: 34px;
-}
-
-section {
-    margin-left: 15%;
+    padding: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 h1, h2 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    clear:left;
 }
 
 h1 {
@@ -18,38 +17,31 @@ h1 {
 p, li {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
+    font-style: normal;
 }
 
 a {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-decoration: none;
-    color:#727272;
+    color:#0b0d95;
 }
 
 a:hover {
     color:#000000;
     text-decoration: underline;
 }
-
-nav {
-    position:fixed;
-    width:10%;
-}
    
 img {  
     height: 150px;
+    float:left;
+    padding-right: 10px;
+    padding-bottom: 25px;
 }
 
-left {
-    float: left;
-    width: 70%;
-    border: 3px solid #727272;
-    padding: 10px;
-  }
-
-clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
+box {
+    position:absolute;
+    background-color: green;
+    top: 1em;
+    right: 1em;
+}
