--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1 {
     font-size: 2em;
 }
 
-p, li {
+p, li, nav {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
     font-style: normal;
@@ -39,9 +39,12 @@ img {
     padding-bottom: 25px;
 }
 
-box {
+nav {
     position:absolute;
-    background-color: green;
+    position:fixed;
+    padding:1%;
+    background-color: #91c6ee;
     top: 1em;
     right: 1em;
+    text-align: center;
 }
